@@ -1,1 +1,14 @@
 # Graph-Visualizer
+
+IDE used- IntelliJ 
+
+The program has several dependencies and will not run properly without them.
+1. JavaFX 13 SDK provided in res folder 
+2. JFoenix Material Library provided in the same res folder 
+
+After setting these dependencies set the VM path : 
+--module-path " Path to javafx-sdk-13.0.1\lib "  --add-modules javafx.controls,javafx.fxml
+
+Source code is in "src" folder
+
+After setting all this, run the main class from Main.java to start the program.
